
[TestMarketplaceItemToJSON - 1]
{
 "_id": "1234567890abcdefg",
 "categoryId": "rocketScience",
 "description": "A simple Hello Universe example based on Rocket-Launcher's Interstellar Template.",
 "documentation": {
  "type": "markdown",
  "url": "https://raw.githubusercontent.com/rocket-launcher/Interstellar-Hello-Universe-Example/master/README.md"
 },
 "imageUrl": "/v2/files/download/rocket-launch-image.png",
 "name": "RocketScience 101: Hello Universe Example",
 "resources": {
  "services": {
   "rocket-science-hello-universe-example": {
    "archiveUrl": "https://github.com/rocket-launcher/Interstellar-Hello-Universe-Example/archive/master.tar.gz",
    "containerPorts": [
     {
      "from": 80,
      "name": "spaceport",
      "protocol": "TCP",
      "to": 3000
     }
    ],
    "type": "template"
   }
  }
 },
 "supportedBy": "NASA's Humor Department",
 "supportedByImageUrl": "/v2/files/download/rocket-science-logo.png",
 "type": "example"
}
---

[TestMarketplaceItemToYAML - 1]
_id: 1234567890abcdefg
categoryId: rocketScience
description: A simple Hello Universe example based on Rocket-Launcher's Interstellar
  Template.
documentation:
  type: markdown
  url: https://raw.githubusercontent.com/rocket-launcher/Interstellar-Hello-Universe-Example/master/README.md
imageUrl: /v2/files/download/rocket-launch-image.png
name: 'RocketScience 101: Hello Universe Example'
resources:
  services:
    rocket-science-hello-universe-example:
      archiveUrl: https://github.com/rocket-launcher/Interstellar-Hello-Universe-Example/archive/master.tar.gz
      containerPorts:
      - from: 80
        name: spaceport
        protocol: TCP
        to: 3000
      type: template
supportedBy: NASA's Humor Department
supportedByImageUrl: /v2/files/download/rocket-science-logo.png
type: example

---

[TestYAMLParsing - 1]
marketplace.MarketplaceItem{
    ID:                        &"1234567890abcdefg",
    Category:                  (*marketplace.Category)(nil),
    CategoryID:                &"rocketScience",
    ComingSoon:                (*bool)(nil),
    ComponentsIDS:             nil,
    Description:               &"A simple Hello Universe example based on Rocket-Launcher's Interstellar Template.",
    Documentation:             &marketplace.Documentation{Type:"markdown", URL:"https://raw.githubusercontent.com/rocket-launcher/Interstellar-Hello-Universe-Example/master/README.md"},
    ImageURL:                  &"/v2/files/download/rocket-launch-image.png",
    Name:                      &"RocketScience 101: Hello Universe Example",
    PublishOnMiaDocumentation: (*bool)(nil),
    ReleaseStage:              (*string)(nil),
    RepositoryURL:             (*string)(nil),
    Resources:                 &marketplace.Resources{
        Collections: {},
        Endpoints:   {},
        Services:    {
            "rocket-science-hello-universe-example": {
                AdditionalContainers: nil,
                ArchiveURL:           &"https://github.com/rocket-launcher/Interstellar-Hello-Universe-Example/archive/master.tar.gz",
                ComponentID:          (*string)(nil),
                ContainerPorts:       {
                    {
                        From:     int(80),
                        Name:     "spaceport",
                        Protocol: &"TCP",
                        To:       int(3000),
                    },
                },
                CustomFilesConfig:                    nil,
                DefaultAnnotations:                   nil,
                DefaultArgs:                          nil,
                DefaultConfigMaps:                    nil,
                DefaultDocumentationPath:             (*string)(nil),
                DefaultEnvironmentVariables:          nil,
                DefaultHeaders:                       nil,
                DefaultLabels:                        nil,
                DefaultLogParser:                     (*string)(nil),
                DefaultMonitoring:                    (*marketplace.ServiceDefaultMonitoring)(nil),
                DefaultProbes:                        (*marketplace.ServiceDefaultProbes)(nil),
                DefaultResources:                     (*marketplace.ServiceDefaultResources)(nil),
                DefaultSecrets:                       nil,
                DefaultTerminationGracePeriodSeconds: (*float64)(nil),
                Type:                                 &"template",
            },
        },
        UnsecretedVariables: {},
    },
    SupportedBy:         &"NASA's Humor Department",
    SupportedByImageURL: &"/v2/files/download/rocket-science-logo.png",
    Type:                &"example",
}
---

[TestJSONParsing - 1]
marketplace.MarketplaceItem{
    ID:                        &"1234567890abcdefg",
    Category:                  (*marketplace.Category)(nil),
    CategoryID:                &"rocketScience",
    ComingSoon:                (*bool)(nil),
    ComponentsIDS:             nil,
    Description:               &"A simple Hello Universe example based on Rocket-Launcher's Interstellar Template.",
    Documentation:             &marketplace.Documentation{Type:"markdown", URL:"https://raw.githubusercontent.com/rocket-launcher/Interstellar-Hello-Universe-Example/master/README.md"},
    ImageURL:                  &"/v2/files/download/rocket-launch-image.png",
    Name:                      &"RocketScience 101: Hello Universe Example",
    PublishOnMiaDocumentation: (*bool)(nil),
    ReleaseStage:              (*string)(nil),
    RepositoryURL:             (*string)(nil),
    Resources:                 &marketplace.Resources{
        Collections: {},
        Endpoints:   {},
        Services:    {
            "rocket-science-hello-universe-example": {
                AdditionalContainers: nil,
                ArchiveURL:           &"https://github.com/rocket-launcher/Interstellar-Hello-Universe-Example/archive/master.tar.gz",
                ComponentID:          (*string)(nil),
                ContainerPorts:       {
                    {
                        From:     float64(80),
                        Name:     "spaceport",
                        Protocol: &"TCP",
                        To:       float64(3000),
                    },
                },
                CustomFilesConfig:                    nil,
                DefaultAnnotations:                   nil,
                DefaultArgs:                          nil,
                DefaultConfigMaps:                    nil,
                DefaultDocumentationPath:             (*string)(nil),
                DefaultEnvironmentVariables:          nil,
                DefaultHeaders:                       nil,
                DefaultLabels:                        nil,
                DefaultLogParser:                     (*string)(nil),
                DefaultMonitoring:                    (*marketplace.ServiceDefaultMonitoring)(nil),
                DefaultProbes:                        (*marketplace.ServiceDefaultProbes)(nil),
                DefaultResources:                     (*marketplace.ServiceDefaultResources)(nil),
                DefaultSecrets:                       nil,
                DefaultTerminationGracePeriodSeconds: (*float64)(nil),
                Type:                                 &"template",
            },
        },
        UnsecretedVariables: {},
    },
    SupportedBy:         &"NASA's Humor Department",
    SupportedByImageURL: &"/v2/files/download/rocket-science-logo.png",
    Type:                &"example",
}
---

[TestMarketplaceItemToJSONIndent - 1]
{
 "_id": "1234567890abcdefg",
 "categoryId": "rocketScience",
 "description": "A simple Hello Universe example based on Rocket-Launcher's Interstellar Template.",
 "documentation": {
  "type": "markdown",
  "url": "https://raw.githubusercontent.com/rocket-launcher/Interstellar-Hello-Universe-Example/master/README.md"
 },
 "imageUrl": "/v2/files/download/rocket-launch-image.png",
 "name": "RocketScience 101: Hello Universe Example",
 "resources": {
  "services": {
   "rocket-science-hello-universe-example": {
    "archiveUrl": "https://github.com/rocket-launcher/Interstellar-Hello-Universe-Example/archive/master.tar.gz",
    "containerPorts": [
     {
      "from": 80,
      "name": "spaceport",
      "protocol": "TCP",
      "to": 3000
     }
    ],
    "type": "template"
   }
  }
 },
 "supportedBy": "NASA's Humor Department",
 "supportedByImageUrl": "/v2/files/download/rocket-science-logo.png",
 "type": "example"
}
---
